[gd_scene load_steps=3 format=3 uid="uid://6qp74pa7ug2"]

[ext_resource type="Theme" uid="uid://7tc184hs3sib" path="res://themes_fonts/space_theme.tres" id="1"]
[ext_resource type="Script" path="res://subscenes/broadcast/full_screen_round/player_container_big.gd" id="2"]

[node name="PlayerContainer" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1")
script = ExtResource("2")

[node name="Spacer" type="Control" parent="."]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="PointLeft" type="Label" parent="Header"]
layout_mode = 2
theme_type_variation = &"LabelLarge"
text = "()"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Name" type="Label" parent="Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"LabelLarge"
text = "Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PointRight" type="Label" parent="Header"]
layout_mode = 2
theme_type_variation = &"LabelLarge"
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Race" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "Race"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Ranking" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "Ranking"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer2" type="Control" parent="."]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2

[node name="PlayerIcon" type="TextureRect" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
expand_mode = 1
stretch_mode = 6

[node name="Record" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="RaceName" type="VBoxContainer" parent="Record"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Spacer" type="Control" parent="Record"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2

[node name="ThisTourney" type="VBoxContainer" parent="Record"]
layout_mode = 2

[node name="Spacer2" type="Control" parent="Record"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2

[node name="Previously" type="VBoxContainer" parent="Record"]
layout_mode = 2

[node name="Spacer3" type="Control" parent="."]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
